# oqtopus-cli

./: .editorconfig  .gitignore  CITATION.cff  Makefile  README.md  README_old.md  mkdocs.yml  pyproject.toml
.github/workflows/: labeler.yaml
docs/: CONTRIBUTING.md  index.md  install-sh.md  oqtopus-cli.md  spec-status.md
docs/developer_guidelines/: development_flow.md  setup.md
docs/usage/: backend-components.md  backend-environment.md  command-reference.md  configuration.md  device-status.md  installation.md  lifecycle.md  quick-start.md  shell-completion.md  troubleshooting.md
scripts/: install.sh
spec/: install-sh.md  oqtopus-cli.md  spec-status.md
spec/implementation/: copilot-implementation-brief.md
template/backend/config/: .env.local
template/backend/config/combiner/: logging.yaml
template/backend/config/core/: config.yaml  logging.yaml
template/backend/config/estimator/: config.yaml  logging.yaml
template/backend/config/gateway/: config.yaml  device_topology_sim.json
template/backend/config/mitigator/: logging.yaml
template/backend/config/sse_engine/: config.yaml  logging.yaml
template/backend/config/tranqu/: config.yaml
templates/backend/config/: .env
templates/backend/config/combiner/: config.yaml  logging.yaml
templates/backend/config/core/: config.yaml  logging.yaml
templates/backend/config/estimator/: config.yaml  logging.yaml
templates/backend/config/gateway/: config.yaml  logging.yaml
templates/backend/config/mitigator/: config.yaml  logging.yaml
templates/backend/config/sse_engine/: logging.yaml
(+2 files in other folders)
