[project]
name = "oqtopus-cli"
version = "1.0.0"
description = "Documentation for the OQTOPUS CLI"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" }]
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.13,<4.0"

[project.urls]
documentation = "https://oqtopus-cli.readthedocs.io/"
repository = "https://github.com/oqtopus-team/oqtopus-cli"

[dependency-groups]
docs = [
  "mkdocs<2.0", # Stay on 1.x to maintain plugin compatibility
  "mkdocs-glightbox>=0.5.2",
  "mkdocs-literate-nav>=0.6.3",
  "mkdocs-macros-plugin>=1.5.0",
  "mkdocs-material>=9.7.6",
  "pymarkdownlnt>=0.9.37",
  "pymdown-extensions>=10.21.2",
]

[tool.pymarkdown]
plugins.line-length.enabled = false            # MD013: Disable line length limit
plugins.first-line-heading.enabled = false     # MD041: Allow files to start without a top-level heading
plugins.code-block-style.enabled = false       # MD046: Disable code block style consistency
plugins.reference-links-images.enabled = false # MD060: Allow inconsistent reference link styles
